sample-svc-pod-deployment/svc-name.yml
apiVersion: v1
kind: Service
metadata:
  name: node-web-service
  namespace: default
  labels:
    app: node-web-app
spec:
  type: ExternalName
  externalName: nodejs

  #selector:
  #  app: node-web-app
  ports:
  - protocol: TCP
    port: 80              # Le port sur lequel le service écoute
    targetPort: 3000      # Le port sur lequel votre conteneur écoute
  #type: LoadBalancer          # Ou ClusterIP si vous utilisez Ingress
  type: ExternalName      # Ou ClusterIP si vous utilisez Ingress
