sample-svc-pod-deployment/ingress-minimal.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: ingress-class-name-test 
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:
              node-web-service 
            port:
              number: 80
              #number: 30946
