sample-svc-pod-deployment/ingress-static.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-static-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
spec:
  defaultBackend:
    service:
      name: node-web-service 
      port:
        number: 80
