sample-svc-pod-deployment/ingress-svc-namevirtualhost.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  rules:
  - host: nodejs
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: 
              node-web-service 
            port:
              number: 80
