sample-svc-pod-deployment/ingress-svc-unique.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  defaultBackend:
    service:
      name: node-web-service
      port:
        number: 80
